add absensi, departemen, gaji swagger
